--- a/ERCoreCRUD/Views/Shared/_Layout.cshtml
+++ b/ERCoreCRUD/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ERCoreCRUD</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Northwind CRUD</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,6 +31,16 @@
                         </li>
                     </ul>
                 </div>
+                <form asp-controller="Products" asp-action="SearchProducts">
+                    <div class="input-group">
+                        <input type="text" name="q" class="form-control" placeholder="ค้นหาสินค้า...">
+                        <span class="input-group-btn">
+                            <button type="submit" class="btn btn-outline-secondary">
+                                Search
+                            </button>
+                        </span>
+                    </div>
+                </form>
             </div>
         </nav>
     </header>
@@ -42,7 +52,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - ERCoreCRUD - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - ERCoreCRUD - <a asp-area="" asp-controller="Home"
+                asp-action="Privacy">นโยบายความเป็นส่วนตัว</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
