--- a/ERCoreCRUD/Views/Home/Index.cshtml
+++ b/ERCoreCRUD/Views/Home/Index.cshtml
@@ -3,6 +3,66 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Northwind CRUD</h1>
+    <div class="container">
+        <div id="mainCarousel" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="~/images/01.jpg" class="d-block img-fluid" alt="รูปปก 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/02.jpg" class="d-block img-fluid" alt="รูปปก 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/03.jpg" class="d-block img-fluid" alt="รูปปก 3">
+                </div>
+            </div>
+            <button class="carousel-control-prev text-black" type="button" data-bs-target="#mainCarousel"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">ก่อนหน้า</span>
+            </button>
+            <button class="carousel-control-next text-black" type="button" data-bs-target="#mainCarousel"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">ถัดไป</span>
+            </button>
+        </div>
+    </div>
+    <hr />
+
+    <h3>รายการเด่นประจำวันนี้...</h3>
+    <div class="container my-4">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card border-primary mb-4 h-100 d-flex flex-column">
+                    <div class="card-body">
+                        <h3 class="card-title">ASP .NET Core MVC</h3>
+                        <p class="card-text">เรียนรู้พื้นฐานการใช้งาน ASP .NET Core MVC ด้วยภาษา C#</p>
+                        <a href="#" class="btn btn-info mt-auto">อ่านต่อ...</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card border-primary mb-4 h-100 d-flex flex-column">
+                    <div class="card-body">
+                        <h3 class="card-title">Basic WEB API</h3>
+                        <p class="card-text">ศึกษาการสร้าง WEB API แบบใช้งานได้จริง</p>
+                        <a href="#" class="btn btn-info mt-auto">อ่านต่อ...</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card border-primary mb-4 h-100 d-flex flex-column">
+                    <div class="card-body">
+                        <h3 class="card-title">ASP .NET Core Blazor</h3>
+                        <p class="card-text">พัฒนา Web Assembly โดยอาศัยภาษา C#</p>
+                        <a href="#" class="btn btn-info mt-auto">อ่านต่อ...</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
