--- a/ERCoreCRUD/Views/Shared/_Layout.cshtml
+++ b/ERCoreCRUD/Views/Shared/_Layout.cshtml
@@ -12,21 +12,21 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Northwind CRUD</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home"
                                 asp-action="Index">หน้าแรก</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Products"
+                            <a class="nav-link text-light" asp-area="" asp-controller="Products"
                                 asp-action="Index">สินค้า</a>
                         </li>
                     </ul>
@@ -35,7 +35,7 @@
                     <div class="input-group">
                         <input type="text" name="q" class="form-control" placeholder="ค้นหาสินค้า...">
                         <span class="input-group-btn">
-                            <button type="submit" class="btn btn-outline-secondary">
+                            <button type="submit" class="btn btn-outline-secondary text-white">
                                 Search
                             </button>
                         </span>
@@ -51,7 +51,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="bg-dark text-light text-center">
             &copy; 2024 - ERCoreCRUD - <a asp-area="" asp-controller="Home"
                 asp-action="Privacy">นโยบายความเป็นส่วนตัว</a>
         </div>
