--- a/ERCoreCRUD/Views/Products/Index.cshtml
+++ b/ERCoreCRUD/Views/Products/Index.cshtml
@@ -1,43 +1,26 @@
 @model IEnumerable<ERCoreCRUD.Models.db.Product>
 
 @{
-    ViewData["Title"] = "Product";
+    ViewData["Title"] = "รายการสินค้าทั้งหมด";
 }
 
-<h2>Index</h2>
+<h2>รายการสินค้าทั้งหมด</h2>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-success float-md-end mb-1">เพิ่มสินค้าใหม่</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-striped table-hover">
+    <thead class="table-dark">
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.QuantityPerUnit)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitPrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitsInStock)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitsOnOrder)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReorderLevel)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Discontinued)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Supplier)
-            </th>
+            <th></th>
+            <th class="col-md-3">ชื่อสินค้า</th>
+            <th>จำนวนสินค้า</th>
+            <th>ราคา</th>
+            <th>ในสต๊อก</th>
+            <th class="col-md-3">ระหว่างสั่งซื้อ</th>
+            <th>จุดสั่งซื้อ</th>
+            <th>สถานะ</th>
+            <th>ประเภทสินค้า</th>
+            <th>บริษัทจำหน่าย</th>
             <th></th>
         </tr>
     </thead>
@@ -45,6 +28,9 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>
+                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.ProductId">รายละเอียดสินค้า</a>
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.ProductName)
                 </td>
@@ -70,12 +56,11 @@
                     @Html.DisplayFor(modelItem => item.Category.CategoryName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Supplier.ContactName)
+                    @Html.DisplayFor(modelItem => item.Supplier.CompanyName)
                 </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.ProductId" class="btn btn-sm btn-warning">Edit</a>
-                    <a asp-action="Details" asp-route-id="@item.ProductId" class="btn btn-sm btn-primary">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.ProductId" class="btn btn-sm btn-danger">Delete</a>
+                <td class="d-grid gap-1">
+                    <a asp-action="Edit" asp-route-id="@item.ProductId" class="btn btn-warning">แก้ไข</a>
+                    <a asp-action="Delete" asp-route-id="@item.ProductId" class="btn btn-danger">ลบข้อมูล</a>
                 </td>
             </tr>
         }
