--- a/ERCoreCRUD/Views/Shared/_Layout.cshtml
+++ b/ERCoreCRUD/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
     <footer class="border-top footer text-muted">
         <div class="bg-dark text-light text-center">
             &copy; 2024 - ERCoreCRUD - <a asp-area="" asp-controller="Home"
-                asp-action="Privacy">นโยบายความเป็นส่วนตัว</a>
+                asp-action="Privacy">นโยบายความเป็นส่วนตัว</a> | จัดทำโดย Jay Jakkrit
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
